--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SekudProject
 endorsed.classpath=
 excludes=
+file.reference.jfoenix-1.1.0.jar=..\\..\\..\\School-tools\\Software Engineering\\sceneBuilder\\SceneBuilderTools\\SceneBuilderTools\\jfoenix-1.1.0.jar
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\roger\\AppData\\Local\\Java\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JavaFX18.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.jfoenix-1.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
